--- a/index.html
+++ b/index.html
@@ -33,5 +33,28 @@
           navigator.serviceWorker.register("/sw.js");
       }
   </script>
+
+<style>
+  .result-button {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #ff5a5f;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 24px;
+    text-decoration: none;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 100;
+  }
+  </style>
+  
+  <a href="result.html" class="result-button">🔥</a>
+  
 </body>
 </html>
