--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <title>Башҡортса һүҙ уйыны</title>
   <link rel="manifest" href="manifest.json">
   <link rel="stylesheet" href="assets/styles/main.css">
+
+  <link rel="stylesheet" href="assets/styles/help.css">
   
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -44,7 +46,8 @@
           navigator.serviceWorker.register("/sw.js");
       }
   </script>
-
+<script src="js/help.js"></script>
+  
 <style>
   .result-button {
     position: fixed;
