--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Башҡортса һүҙ уйыны</title>
   <link rel="manifest" href="manifest.json">
-  <link rel="stylesheet" href="assets/styles/main.css">
-
-  <link rel="stylesheet" href="assets/styles/help.css">
   
+  <link rel="stylesheet" href="assets/styles/game/game.css">
+  <link rel="stylesheet" href="assets/styles/game/board.css">
+  <link rel="stylesheet" href="assets/styles/game/keyboard.css">
+  <link rel="stylesheet" href="assets/styles/main.css">
+  <link rel="stylesheet" href="assets/styles/help.css">
+
+
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -47,25 +51,6 @@
       }
   </script>
 <script src="js/help.js"></script>
-  
-<style>
-  .result-button {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 24px;
-    text-decoration: none;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    z-index: 100;
-  }
-  </style>
   
 <a href="#" class="result-button">🔥</a>
   
