--- a/index.html
+++ b/index.html
@@ -33,11 +33,7 @@
           <div id="keyboard"></div>
       </div>
   </div>
-  <script>
-    if (!localStorage.getItem('selectedLevel')) {
-        window.location.href = 'levels.html';
-    }
-  </script>
+
   <script src="js/header.js"></script>
   <script src="data/dictionary.js"></script>
   <script src="data/keyboard-layout.js"></script>
@@ -52,7 +48,7 @@
   </script>
 <script src="js/help.js"></script>
   
-<a href="#" class="result-button">🔥</a>
+<a href="#" class="result-button"><img src="assets/pics/flag.svg" alt="Флаг" style="width: 24px; height: 24px;"></a>
   
 </body>
 </html>
