--- a/result.html
+++ b/result.html
@@ -1,16 +1,17 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ba">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-66MPW4GG8B"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-66MPW4GG8B"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-66MPW4GG8B');
-</script>
+      gtag('config', 'G-66MPW4GG8B');
+    </script>
+    <!-- Добавляем библиотеку html2canvas для создания скриншотов -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,32 +20,75 @@
     <link rel="stylesheet" href="assets/styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/styles/result.css">
+    <link rel="stylesheet" href="assets/styles/progress-bar.css">
+    <style>
+        .share-container {
+            text-align: center;
+            width: 100%;
+            margin-bottom: 1.5rem;
+        }
+        
+        .share-button {
+            background-color: transparent;
+            color: var(--color-text);
+            border: 2px solid var(--color-border);
+            padding: 1rem 2rem;
+            font-size: 1.25rem;
+            font-weight: 600;
+            border-radius: 12px;
+            cursor: pointer;
+            transition: var(--transition);
+            width: 100%;
+            max-width: 300px;
+        }
+
+        .share-button:hover {
+            transform: translateY(-2px);
+            box-shadow: var(--shadow-md);
+            border-color: var(--color-correct);
+        }
+
+        .share-button:active {
+            transform: translateY(1px);
+        }
+        
+        @media (max-width: 500px) {
+            .share-button {
+                font-size: 1.125rem;
+                padding: 0.75rem 1.5rem;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="result-container">
         <div id="result-content">
+            <div id="result-icon" class="result-icon" style="text-align: center; margin-bottom: 1rem;"></div>
             <div class="result-message" id="result-message"></div>
             <div class="word-reveal" id="word-reveal"></div>
             <!-- Добавляем секцию истории попыток -->
-            <div class="attempts-history">
-                <div id="attempts-board"></div>
-            </div>
+         <!--    <div class="attempts-history">
+               <div id="attempts-board"></div>
+            </div> -->
             <div class="stats">
                 <div class="stat-item">
                     <div class="stat-value" id="attempts-count">0</div>
-                    <div class="stat-label">Тырышыу</div>
+                    <div class="stat-label">Тырышыуҙар</div>
                 </div>
                 <div class="stat-item">
                     <div class="stat-value" id="time-taken">0</div>
                     <div class="stat-label">Ваҡыт</div>
                 </div>
             </div>
+            <div class="share-container" id="share-container">
+                <button class="share-button" id="share-button" onclick="shareResult()">Дустарға маҡтанырға</button>
+            </div>
             <div class="button-group">
-                <button class="level-select-button" onclick="selectLevel()">Кимәл һайлау</button>
                 <button class="continue-button" onclick="startNewGame()">Яңы уйын</button>
             </div>
         </div>
     </div>
+    <script src="data/dictionary.js"></script>
     <script src="js/header.js"></script>
     <script src="js/result.js"></script>
 </body>
