--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
           navigator.serviceWorker.register("/sw.js");
       }
   </script>
+  <script>
+  if (typeof navigator.serviceWorker !== 'undefined') {
+    navigator.serviceWorker.register('sw.js')
+  }
+</script>
 <script src="js/help.js"></script>
   
 <a href="#" class="result-button"><img src="assets/pics/flag.svg" alt="Флаг" style="width: 24px; height: 24px;"></a>
